--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     const database = {
         "ch1": [
   {
-    [cite_start]"q": "In the context of the file-based approach, what specific limitation arises when the same data is stored by different programs, requiring multiple updates for a single change? [cite: 52, 54]",
+    "q": "In the context of the file-based approach, what specific limitation arises when the same data is stored by different programs, requiring multiple updates for a single change? [cite: 52, 54]",
     "options": [
       "Data Abstraction",
       "Data Duplication and Inconsistency",
@@ -223,7 +223,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "Which component of the DBMS environment acts as the 'bridge' between the machine (hardware/software) and the human elements (people/procedures)? [cite: 421, 425]",
+    "q": "Which component of the DBMS environment acts as the 'bridge' between the machine (hardware/software) and the human elements (people/procedures)? [cite: 421, 425]",
     "options": [
       "The Operating System",
       "The Database Manager",
@@ -233,7 +233,7 @@
     "correct": 3
   },
   {
-    [cite_start]"q": "According to the database characteristics, what is the term for the description of the database (data about data) stored in the DBMS catalog? [cite: 90, 387]",
+    "q": "According to the database characteristics, what is the term for the description of the database (data about data) stored in the DBMS catalog? [cite: 90, 387]",
     "options": [
       "Program-operation",
       "Meta-data",
@@ -243,7 +243,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "Which level of the Three-Schema Architecture represents the community view of the database and describes what data is stored and the relationships among them? [cite: 300, 301]",
+    "q": "Which level of the Three-Schema Architecture represents the community view of the database and describes what data is stored and the relationships among them? [cite: 300, 301]",
     "options": [
       "External Level",
       "Internal Level",
@@ -253,7 +253,7 @@
     "correct": 4
   },
   {
-    [cite_start]"q": "What is the primary responsibility of the Database Administrator (DBA) regarding the database environment's primary resource? [cite: 137, 139]",
+    "q": "What is the primary responsibility of the Database Administrator (DBA) regarding the database environment's primary resource? [cite: 137, 139]",
     "options": [
       "Designing application interfaces",
       "Physical realization and authorizing access",
@@ -263,7 +263,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "During the Database Design Process, which phase is responsible for mapping the logical model directly to a specific DBMS and specifying storage structures? [cite: 583, 584]",
+    "q": "During the Database Design Process, which phase is responsible for mapping the logical model directly to a specific DBMS and specifying storage structures? [cite: 583, 584]",
     "options": [
       "Conceptual Design",
       "Requirement Analysis",
@@ -273,7 +273,7 @@
     "correct": 3
   },
   {
-    [cite_start]"q": "Logical Data Independence is defined as the capacity to change the conceptual schema without having to change which of the following? [cite: 365]",
+    "q": "Logical Data Independence is defined as the capacity to change the conceptual schema without having to change which of the following? [cite: 365]",
     "options": [
       "The Internal Schema",
       "The Physical Storage",
@@ -283,7 +283,7 @@
     "correct": 3
   },
   {
-    [cite_start]"q": "Which internal software component of the DBMS is responsible for managing the allocation of storage space on the disk and locating blocks containing required records? [cite: 441, 442]",
+    "q": "Which internal software component of the DBMS is responsible for managing the allocation of storage space on the disk and locating blocks containing required records? [cite: 441, 442]",
     "options": [
       "Query Processor",
       "DDL Compiler",
@@ -293,7 +293,7 @@
     "correct": 3
   },
   {
-    [cite_start]"q": "What is the specific term used to describe the actual data stored in a database at a particular moment in time? [cite: 227]",
+    "q": "What is the specific term used to describe the actual data stored in a database at a particular moment in time? [cite: 227]",
     "options": [
       "Database Schema",
       "Database Instance (or State)",
@@ -303,7 +303,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "Which type of database user is typically unaware of the DBMS and accesses data through specially written application programs using simple commands? [cite: 174, 175]",
+    "q": "Which type of database user is typically unaware of the DBMS and accesses data through specially written application programs using simple commands? [cite: 174, 175]",
     "options": [
       "Database Designers",
       "Sophisticated Users",
@@ -313,7 +313,7 @@
     "correct": 4
   },
   {
-    [cite_start]"q": "In the database design process, what is the output of the 'Logical Design' phase? [cite: 572]",
+    "q": "In the database design process, what is the output of the 'Logical Design' phase? [cite: 572]",
     "options": [
       "A set of functional requirements",
       "A database schema in the implementation data model of the DBMS",
@@ -323,7 +323,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "Which DBMS language is used by the DBA to specify the conceptual schema and define the database structure? [cite: 372]",
+    "q": "Which DBMS language is used by the DBA to specify the conceptual schema and define the database structure? [cite: 372]",
     "options": [
       "DML (Data Manipulation Language)",
       "DDL (Data Definition Language)",
@@ -333,7 +333,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "What is the main function of the 'Conceptual/Internal Mapping' in the DBMS architecture? [cite: 333]",
+    "q": "What is the main function of the 'Conceptual/Internal Mapping' in the DBMS architecture? [cite: 333]",
     "options": [
       "To map user views to the conceptual schema",
       "To enable the DBMS to find actual physical records constituting a logical record",
@@ -343,7 +343,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "Which limitation of file-based systems involves the structure of the file being embedded in the application programs, making them dependent on each other? [cite: 66, 67]",
+    "q": "Which limitation of file-based systems involves the structure of the file being embedded in the application programs, making them dependent on each other? [cite: 66, 67]",
     "options": [
       "Data Duplication",
       "Incompatible file formats",
@@ -353,7 +353,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "Which component of the DBMS performs the task of enforcing constraints to maintain consistency, integrity, and security? [cite: 436, 438]",
+    "q": "Which component of the DBMS performs the task of enforcing constraints to maintain consistency, integrity, and security? [cite: 436, 438]",
     "options": [
       "The Database Manager (DM)",
       "The DDL Compiler",
@@ -363,7 +363,7 @@
     "correct": 1
   },
   {
-    [cite_start]"q": "In the context of database design, what does 'System Definition' establish? [cite: 537, 538]",
+    "q": "In the context of database design, what does 'System Definition' establish? [cite: 537, 538]",
     "options": [
       "The detailed indexes for the database",
       "The scope and boundaries of the database application",
@@ -373,7 +373,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "Physical Data Independence allows the DBA to change the internal schema without affecting which level? [cite: 366]",
+    "q": "Physical Data Independence allows the DBA to change the internal schema without affecting which level? [cite: 366]",
     "options": [
       "The Conceptual Schema",
       "The Physical Disk",
@@ -383,7 +383,7 @@
     "correct": 1
   },
   {
-    [cite_start]"q": "Which category of data models provides concepts that are close to the way many users perceive data (also called entity-based)? [cite: 216]",
+    "q": "Which category of data models provides concepts that are close to the way many users perceive data (also called entity-based)? [cite: 216]",
     "options": [
       "Physical Data Models",
       "Conceptual Data Models",
@@ -393,7 +393,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "What is the primary function of the DML Preprocessor? [cite: 449, 450]",
+    "q": "What is the primary function of the DML Preprocessor? [cite: 449, 450]",
     "options": [
       "To store metadata in the catalog",
       "To convert embedded DML statements into standard host language function calls",
@@ -403,7 +403,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "Which of the following is listed as a disadvantage of using a DBMS? [cite: 480]",
+    "q": "Which of the following is listed as a disadvantage of using a DBMS? [cite: 480]",
     "options": [
       "Reduced data redundancy",
       "Higher impact of a failure",
@@ -413,7 +413,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "The database schema is also technically referred to as the: [cite: 251]",
+    "q": "The database schema is also technically referred to as the: [cite: 251]",
     "options": [
       "Extension",
       "Intension",
@@ -423,7 +423,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "Which phase of the database design process involves determining the data types, keys, constraints, and triggers using DBMS syntax? [cite: 593, 594]",
+    "q": "Which phase of the database design process involves determining the data types, keys, constraints, and triggers using DBMS syntax? [cite: 593, 594]",
     "options": [
       "Requirement Analysis",
       "Conceptual Design",
@@ -433,7 +433,7 @@
     "correct": 4
   },
   {
-    [cite_start]"q": "What is the distinct characteristic of 'Program-data independence' in a DBMS? [cite: 388]",
+    "q": "What is the distinct characteristic of 'Program-data independence' in a DBMS? [cite: 388]",
     "options": [
       "It allows changing storage structures without changing access programs",
       "It requires all programs to be written in C++",
@@ -443,7 +443,7 @@
     "correct": 1
   },
   {
-    [cite_start]"q": "Who are the 'Sophisticated Users' of a database system? [cite: 180, 181]",
+    "q": "Who are the 'Sophisticated Users' of a database system? [cite: 180, 181]",
     "options": [
       "Users who only use menu-driven options",
       "Checkout assistants in supermarkets",
@@ -453,7 +453,7 @@
     "correct": 3
   },
   {
-    [cite_start]"q": "What is the main goal of the 'Conceptual Design' phase? [cite: 550, 552]",
+    "q": "What is the main goal of the 'Conceptual Design' phase? [cite: 550, 552]",
     "options": [
       "To create a concise description of data requirements independent of implementation details",
       "To map the data to a specific DBMS software",
@@ -463,7 +463,7 @@
     "correct": 1
   },
   {
-    [cite_start]"q": "Which DBMS component converts DDL statements into a set of tables containing metadata? [cite: 452, 453]",
+    "q": "Which DBMS component converts DDL statements into a set of tables containing metadata? [cite: 452, 453]",
     "options": [
       "Query Processor",
       "DDL Compiler",
@@ -473,7 +473,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "Atomicity, a problem in file-based systems, refers to the requirement that: [cite: 74, 75]",
+    "q": "Atomicity, a problem in file-based systems, refers to the requirement that: [cite: 74, 75]",
     "options": [
       "Data must be shared among all users",
       "A transaction must happen in its entirety or not at all",
@@ -483,7 +483,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "The 'External Level' of the Three-Schema Architecture describes: [cite: 291, 292]",
+    "q": "The 'External Level' of the Three-Schema Architecture describes: [cite: 291, 292]",
     "options": [
       "How the data is physically stored",
       "The part of the database relevant to a particular user",
@@ -493,7 +493,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "In the 'Logical Design' phase, what is a key step involved? [cite: 578]",
+    "q": "In the 'Logical Design' phase, what is a key step involved? [cite: 578]",
     "options": [
       "Interviewing customers",
       "Normalizing the table structure to remove redundant attributes",
@@ -503,7 +503,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "What does the 'Internal Level' of the database architecture describe? [cite: 311, 312]",
+    "q": "What does the 'Internal Level' of the database architecture describe? [cite: 311, 312]",
     "options": [
       "The user's view of the data",
       "The community view of the data",
@@ -513,7 +513,7 @@
     "correct": 3
   },
   {
-    [cite_start]"q": "Which type of DML is described as 'set-oriented' and 'declarative' (specifying what to retrieve rather than how)? [cite: 381]",
+    "q": "Which type of DML is described as 'set-oriented' and 'declarative' (specifying what to retrieve rather than how)? [cite: 381]",
     "options": [
       "Low Level DML",
       "Procedural DML",
@@ -523,7 +523,7 @@
     "correct": 3
   },
   {
-    [cite_start]"q": "What is 'Data Integrity' in the context of file-based vs. DBMS systems? [cite: 61, 62]",
+    "q": "What is 'Data Integrity' in the context of file-based vs. DBMS systems? [cite: 61, 62]",
     "options": [
       "The speed of data retrieval",
       "The maintenance and assurance that data in a database are correct and consistent",
@@ -533,7 +533,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "Which logical database designer task involves identifying the data (entities and attributes) and relationships? [cite: 156, 157]",
+    "q": "Which logical database designer task involves identifying the data (entities and attributes) and relationships? [cite: 156, 157]",
     "options": [
       "Physical database design",
       "Logical database design",
@@ -543,7 +543,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "The Query Processor's role is to: [cite: 432, 434]",
+    "q": "The Query Processor's role is to: [cite: 432, 434]",
     "options": [
       "Manage physical disk space",
       "Interpret user queries and convert them into operations for the Database Manager",
@@ -553,7 +553,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "Concurrency in a database system is defined as: [cite: 72]",
+    "q": "Concurrency in a database system is defined as: [cite: 72]",
     "options": [
       "The ability to store large amounts of data",
       "The ability to allow multiple users to access the same record without errors",
@@ -563,7 +563,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "What is the first step in the Database Design Process? [cite: 515]",
+    "q": "What is the first step in the Database Design Process? [cite: 515]",
     "options": [
       "Physical Design",
       "Logical Design",
@@ -573,7 +573,7 @@
     "correct": 3
   },
   {
-    [cite_start]"q": "What defines the 'valid state' of a database? [cite: 248]",
+    "q": "What defines the 'valid state' of a database? [cite: 248]",
     "options": [
       "A state containing no data",
       "A state that satisfies the structure and constraints of the database",
@@ -583,7 +583,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "Which mapping enables the DBMS to map names in the user's view onto the relevant part of the conceptual schema? [cite: 334]",
+    "q": "Which mapping enables the DBMS to map names in the user's view onto the relevant part of the conceptual schema? [cite: 334]",
     "options": [
       "Conceptual/Internal Mapping",
       "Physical/Logical Mapping",
@@ -593,7 +593,7 @@
     "correct": 3
   },
   {
-    [cite_start]"q": "In the DBMS environment, 'Procedures' refer to: [cite: 411, 412]",
+    "q": "In the DBMS environment, 'Procedures' refer to: [cite: 411, 412]",
     "options": [
       "The machine code of the DBMS",
       "Instructions and rules applied to the design and use of the database",
@@ -603,7 +603,7 @@
     "correct": 2
   },
   {
-    [cite_start]"q": "The data description stored in the system log or data dictionary is known as: [cite: 90]",
+    "q": "The data description stored in the system log or data dictionary is known as: [cite: 90]",
     "options": [
       "Micro data",
       "Meta data",
