--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       "Logical Data Independence",
       "Concurrent Access Anomalies"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "Which component of the DBMS environment acts as the 'bridge' between the machine (hardware/software) and the human elements (people/procedures)?",
@@ -230,7 +230,7 @@
       "Data",
       "The Query Processor"
     ],
-    "correct": 3
+    "correct": 1
   },
   {
     "q": "According to the database characteristics, what is the term for the description of the database (data about data) stored in the DBMS catalog?",
@@ -240,7 +240,7 @@
       "User View",
       "Transaction"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "Which level of the Three-Schema Architecture represents the community view of the database and describes what data is stored and the relationships among them?",
@@ -250,7 +250,7 @@
       "Physical Level",
       "Conceptual Level"
     ],
-    "correct": 4
+    "correct": 3
   },
   {
     "q": "What is the primary responsibility of the Database Administrator (DBA) regarding the database environment's primary resource?",
@@ -260,7 +260,7 @@
       "Writing end-user queries",
       "Manufacturing hardware components"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "During the Database Design Process, which phase is responsible for mapping the logical model directly to a specific DBMS and specifying storage structures?",
@@ -270,7 +270,7 @@
       "Physical Design",
       "System Definition"
     ],
-    "correct": 3
+    "correct": 2
   },
   {
     "q": "Logical Data Independence is defined as the capacity to change the conceptual schema without having to change which of the following?",
@@ -280,7 +280,7 @@
       "The External Schemas and application programs",
       "The Database Administrator"
     ],
-    "correct": 3
+    "correct": 2
   },
   {
     "q": "Which internal software component of the DBMS is responsible for managing the allocation of storage space on the disk and locating blocks containing required records?",
@@ -290,7 +290,7 @@
       "File Manager",
       "Dictionary Manager"
     ],
-    "correct": 3
+    "correct": 2
   },
   {
     "q": "What is the specific term used to describe the actual data stored in a database at a particular moment in time?",
@@ -300,7 +300,7 @@
       "Meta-data",
       "Data Model"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "Which type of database user is typically unaware of the DBMS and accesses data through specially written application programs using simple commands?",
@@ -310,7 +310,7 @@
       "System Analysts",
       "Naïve Users"
     ],
-    "correct": 4
+    "correct": 3
   },
   {
     "q": "In the database design process, what is the output of the 'Logical Design' phase?",
@@ -320,7 +320,7 @@
       "A physical file organization plan",
       "A high-level conceptual schema independent of implementation"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "Which DBMS language is used by the DBA to specify the conceptual schema and define the database structure?",
@@ -330,7 +330,7 @@
       "Host Language",
       "High-level Procedural Language"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "What is the main function of the 'Conceptual/Internal Mapping' in the DBMS architecture?",
@@ -340,7 +340,7 @@
       "To connect the DBA to the end-users",
       "To translate high-level queries into application code"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "Which limitation of file-based systems involves the structure of the file being embedded in the application programs, making them dependent on each other?",
@@ -350,7 +350,7 @@
       "Concurrent-access anomalies",
       "Security problems"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "Which component of the DBMS performs the task of enforcing constraints to maintain consistency, integrity, and security?",
@@ -360,7 +360,7 @@
       "The End User",
       "The Disk Manager"
     ],
-    "correct": 1
+    "correct": 0
   },
   {
     "q": "In the context of database design, what does 'System Definition' establish?",
@@ -370,7 +370,7 @@
       "The programming language to be used",
       "The final testing protocols"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "Physical Data Independence allows the DBA to change the internal schema without affecting which level?",
@@ -380,7 +380,7 @@
       "The Operating System",
       "The Hardware Configuration"
     ],
-    "correct": 1
+    "correct": 0
   },
   {
     "q": "Which category of data models provides concepts that are close to the way many users perceive data (also called entity-based)?",
@@ -390,7 +390,7 @@
       "Implementation Data Models",
       "Low-level Data Models"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "What is the primary function of the DML Preprocessor?",
@@ -400,7 +400,7 @@
       "To allocate storage space on the disk",
       "To design the physical database structure"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "Which of the following is listed as a disadvantage of using a DBMS?",
@@ -410,7 +410,7 @@
       "Improved data sharing",
       "Enforcement of standards"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "The database schema is also technically referred to as the:",
@@ -420,7 +420,7 @@
       "Instance",
       "Observation"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "Which phase of the database design process involves determining the data types, keys, constraints, and triggers using DBMS syntax?",
@@ -430,7 +430,7 @@
       "Logical Design",
       "Physical Design"
     ],
-    "correct": 4
+    "correct": 2
   },
   {
     "q": "What is the distinct characteristic of 'Program-data independence' in a DBMS?",
@@ -440,7 +440,7 @@
       "It prevents users from accessing the database concurrently",
       "It ensures data is always duplicated for safety"
     ],
-    "correct": 1
+    "correct": 0
   },
   {
     "q": "Who are the 'Sophisticated Users' of a database system?",
@@ -450,7 +450,7 @@
       "Users familiar with the DBMS facilities who may use high-level query languages",
       "Managers who do not use computers"
     ],
-    "correct": 3
+    "correct": 2
   },
   {
     "q": "What is the main goal of the 'Conceptual Design' phase?",
@@ -460,7 +460,7 @@
       "To define the physical file organization",
       "To write the application code"
     ],
-    "correct": 1
+    "correct": 0
   },
   {
     "q": "Which DBMS component converts DDL statements into a set of tables containing metadata?",
@@ -470,7 +470,7 @@
       "File Manager",
       "DML Preprocessor"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "Atomicity, a problem in file-based systems, refers to the requirement that:",
@@ -480,7 +480,7 @@
       "Data must be encrypted",
       "Files must be small in size"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "The 'External Level' of the Three-Schema Architecture describes:",
@@ -490,7 +490,7 @@
       "The logical structure of the entire database",
       "The operating system access methods"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "In the 'Logical Design' phase, what is a key step involved?",
@@ -500,7 +500,7 @@
       "Selecting the hardware brand",
       "Creating the initial ER diagram"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "What does the 'Internal Level' of the database architecture describe?",
@@ -510,7 +510,7 @@
       "The physical representation of the database on the computer",
       "The semantic information about the data"
     ],
-    "correct": 3
+    "correct": 2
   },
   {
     "q": "Which type of DML is described as 'set-oriented' and 'declarative' (specifying what to retrieve rather than how)?",
@@ -520,7 +520,7 @@
       "High Level DML",
       "Assembly Language"
     ],
-    "correct": 3
+    "correct": 2
   },
   {
     "q": "What is 'Data Integrity' in the context of file-based vs. DBMS systems?",
@@ -530,7 +530,7 @@
       "The ability to hide data from users",
       "The duplication of files across systems"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "Which logical database designer task involves identifying the data (entities and attributes) and relationships?",
@@ -540,7 +540,7 @@
       "Application programming",
       "Network administration"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "The Query Processor's role is to:",
@@ -550,7 +550,7 @@
       "Compile the schema definitions",
       "Backup the database"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "Concurrency in a database system is defined as:",
@@ -560,7 +560,7 @@
       "The process of backing up data",
       "The separation of programs from data"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "What is the first step in the Database Design Process?",
@@ -570,7 +570,7 @@
       "Requirement Gathering and Analysis",
       "Testing"
     ],
-    "correct": 3
+    "correct": 2
   },
   {
     "q": "What defines the 'valid state' of a database?",
@@ -580,7 +580,7 @@
       "A state immediately after installation",
       "A state where all users are logged out"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "Which mapping enables the DBMS to map names in the user's view onto the relevant part of the conceptual schema?",
@@ -590,7 +590,7 @@
       "External/Conceptual Mapping",
       "Network/Local Mapping"
     ],
-    "correct": 3
+    "correct": 2
   },
   {
     "q": "In the DBMS environment, 'Procedures' refer to:",
@@ -600,7 +600,7 @@
       "The electrical wiring of the hardware",
       "The query languages used by programmers"
     ],
-    "correct": 2
+    "correct": 1
   },
   {
     "q": "The data description stored in the system log or data dictionary is known as:",
@@ -610,9 +610,10 @@
       "Beta data",
       "Raw data"
     ],
-    "correct": 2
+    "correct": 1
   }
 ],
+  /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
         "ch2": [
   {
     "q": "According to the origins of the Relational Model, who proposed the model in 1970 and subsequently won the ACM Turing Award?",
@@ -935,7 +936,7 @@
     "correct": 2
   },
   {
-    "q": "Which of the following NOT a valid update operation on a relation?",
+    "q": "Which of the following is NOT a valid update operation on a relation?",
     "options": [
       "INSERT a tuple",
       "DELETE a tuple",
@@ -1015,6 +1016,8 @@
     "correct": 2
   }
 ],
+    /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
+
         "ch4": [
   {
     "q": "In the context of ER modeling, what is the primary function of an 'Associative Entity'?",
@@ -1417,6 +1420,8 @@
     "correct": 2
   }
 ],
+    /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
+
         "ch6": [
   {
     "q": "What is the primary output of the ER-to-Relational Mapping Algorithm?",
@@ -1719,6 +1724,7 @@
     "correct": 1
   }
 ],
+    /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
 "ch7": [
   {
     "q": "The Enhanced-ER (EER) model is primarily distinguished from the standard ER model by the inclusion of which concepts?",
@@ -1921,6 +1927,7 @@
     "correct": 0
   }
 ],
+    /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
 "ch8": [
   {
     "q": "What is the primary focus of 'Step 8' in the EER-to-Relational Mapping Algorithm?",
