--- a/index.html
+++ b/index.html
@@ -2246,7 +2246,7 @@
         showScreen('result');
         const pct = Math.round((score / currentChapter.length) * 100);
         ui.scoreDisplay.innerText = `${pct}%`;
-        ui.msgDisplay.innerText = pct >= 80 ? "Excellent mastery of Statistics!" : "Good effort! Keep reviewing.";
+        ui.msgDisplay.innerText = pct >= 80 ? "Excellent mastery of DBMS" : "Good effort! Keep reviewing.";
     }
 
     function showScreen(name) {
